@@ -1,7 +1,7 @@
 AUX Makefile 266 RMD160 e0de84c3254288cc52266e6f05656758f5102c62 SHA1 af142ea41bb37f5b4d82a9d38f9a613df57a6a2e SHA256 29a1424722da4229c2a224cf73504e6bb712ec74f092500bce78fd9e8513af45
 DIST pngcrush-1.6.15-nolib.tar.bz2 42608 RMD160 4f25e825ad1eda86ea0a8baf36b4783ae317a5fc SHA1 c3d20e1fdac37d3208ee5cf04173144f14377006 SHA256 3d27f7c3b7f37d29b2c449d0228154b1807a215a558fccec0c12ce7bbf9819e1
 DIST pngcrush-1.6.19-nolib.tar.bz2 53664 RMD160 f22573b33e525fabb971f0da2dc3412957e1d9f0 SHA1 f3077e706ead1231c67dd9c995d87b27bf04125d SHA256 ed53c8c1779bf2a20519272d21575b91c396ea885351e4c7384bb1f2d586fc6c
-EBUILD pngcrush-1.6.15.ebuild 800 RMD160 6246ab9565c2a099f19de3bafe333d748c271e4e SHA1 62388f8b282e8c4faaa6e4c166f2c0e7c12f6e4f SHA256 40a614a53544ce9bdda08c0c5afa460d87fbdf8a1ced5b100d8fd07873ca3574
-EBUILD pngcrush-1.6.19.ebuild 810 RMD160 745d19b182131737e996de4d79e9b467b04281f5 SHA1 70e06139c4a742ab1f7c77deeeca1d25cf43233b SHA256 b05fea876320827e2c5386b17c29d331dc6f6c345c46b625421fb90434653789
-MISC ChangeLog 5841 RMD160 7fbbd25a2199fc08202b8f457982491c7fef05f4 SHA1 7f5711cebda03bff379a6e9384b3c5fb955e5cd1 SHA256 8a53ece30ff101ea48cbc8ec8337be5d535ff49d060e6cf809451768a6a1171a
+EBUILD pngcrush-1.6.15.ebuild 801 RMD160 67a648ca410424b0a3fa1a39323343ca7c0e9ccb SHA1 f037f118a9a51ce5de5e2629e370f351518c4299 SHA256 efb7d7ce245822f881f9d0631507827fddcd60bc0f44f483a61ceaf3f99b651f
+EBUILD pngcrush-1.6.19.ebuild 811 RMD160 1b98bb20b4ac1616a36d842bf5a83f3126ea9697 SHA1 8356b004edf094286f31c43f62fda1d034c5d28d SHA256 f0fb7420713de5d001c639c1c16d1e68f9b5a577fb5b4f106dd416567bd350ab
+MISC ChangeLog 6004 RMD160 1c77474752a638c2276089cffeb2f530f26b37eb SHA1 0c967c5193aac454bbabf793c4f59a38a9f9253c SHA256 e3c8552a92e1c2f4b5952f93b75e42643654ff2e781d7d8d112131012bf64cc4
 MISC metadata.xml 161 RMD160 60f70b15d67f0e6aafc59833b2f0a30e30b51765 SHA1 1c35398222ef7ed670c31965e42cca77fe4b1da6 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1
