@@ -1,11 +1,11 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/pngcrush-1.6.19.ebuild,v 1.1 2009/06/28 13:04:47 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/pngcrush-1.6.19.ebuild,v 1.2 2009/11/26 09:24:44 maekke Exp $
 
 inherit eutils toolchain-funcs
 
 DESCRIPTION="Portable Network Graphics (PNG) optimizing utility"
-HOMEPAGE="http://pmt.sourceforge.net/pngcrush"
+HOMEPAGE="http://pmt.sourceforge.net/pngcrush/"
 SRC_URI="mirror://sourceforge/pmt/${P}-nolib.tar.bz2"
 
 LICENSE="as-is"
