@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/pngcrush
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/ChangeLog,v 1.46 2009/06/28 13:04:47 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/ChangeLog,v 1.47 2009/11/26 09:24:44 maekke Exp $
+
+  26 Nov 2009; Markus Meier <maekke@gentoo.org> pngcrush-1.6.15.ebuild,
+  pngcrush-1.6.19.ebuild:
+  add trailing slash to HOMEPAGE by Mr. Anderson in bug #293819
 
 *pngcrush-1.6.19 (28 Jun 2009)
 
